added inference hw link

--- a/inference.hw.html
+++ b/inference.hw.html
@@ -3353,7 +3353,7 @@ mean of x
 </section>
 <section id="problem-4" class="level2">
 <h2 class="anchored" data-anchor-id="problem-4">problem 4</h2>
-<p>can’t post/push because github not working</p>
+<p>can’t post/push because github not working <a href="https://github.com/karb-05/MATH250_github_sandbox">text</a></p>
 </section>
 
 </main>
